--- a/locales/de.json
+++ b/locales/de.json
@@ -2,6 +2,7 @@
   "home": {
     "title": "Luftbefeuchtungssysteme",
     "subtitle": "Entwickelt zur Verbesserung des Mikroklimas in Ihrem Haus, Ihrer Wohnung oder Ihrem Büro",
+    "button": "Wie es funktioniert",
     "humidification": {
       "title": "Warum ist Luftbefeuchtung wichtig?",
       "list": [
@@ -15,7 +16,8 @@
     "applications": {
       "title": "Einsatzbereiche",
       "banner": {
-        "subtitle": "Die Luftbefeuchtungssysteme von Liechty vereinen die neuesten Innovationen im Bereich der zerstäubten Luftbefeuchtung mit einem bewussten Schwerpunkt auf höchste Hygiene und Anwendersicherheit."
+        "subtitle": "Die Luftbefeuchtungssysteme von Liechty vereinen die neuesten Innovationen im Bereich der zerstäubten Luftbefeuchtung mit einem bewussten Schwerpunkt auf höchste Hygiene und Anwendersicherheit.",
+        "button": "Erkunden"
       }
     },
     "howWorks": {
@@ -30,27 +32,39 @@
   },
   "about": {
     "tagline": "“Wir machen die Luft sauberer und süßer und Ihre Lungen gesünder”",
+    "button": "Entdecken",
     "brand": {
+      "title": "Unsere Marke",
       "content": [
         "Unsere Marke stellt innovative Befeuchtungssysteme für Häuser, Wohnungen, Büros und andere gewerbliche Räume dar.",
         "Die Mission der Marke Liechty ist es, qualitativ hochwertige, effiziente und sichere Luftbefeuchtungssysteme für private und gewerbliche Anwendungen zu liefern, zu installieren und zu warten.",
         "Die Ausrüstung von Liechty erfüllt die höchsten Hygienestandards, wobei der Schwerpunkt auf der Sauberkeit des während des Befeuchtungsprozesses zerstäubten Wassers liegt."
       ]
     },
-    "info": [
-      {
-        "desc": "Wir haben all unsere Erfahrungen gesammelt, um sie in der Entwicklung unserer Befeuchtungssysteme anzuwenden."
-      },
-      {
-        "desc": "Wir haben zwei Hauptniederlassungen in Europa und Kanada eröffnet, wo die Luftbefeuchtung in Innenräumen ein echtes Problem darstellt."
-      },
-      {
-        "desc": "Wir konzentrieren uns auf den Ausbau unseres Partner- und Unterstützungsnetzes in der ganzen Welt."
-      }
-    ]
+    "info": {
+      "title": "In Zahlen",
+      "content": [
+        {
+          "title": ">15<span class=\"text-34 md:text-20\">Jahre</span>",
+          "subtitle": "Erfahrung in der Luftbefeuchtung",
+          "desc": "Wir haben all unsere Erfahrungen gesammelt, um sie in der Entwicklung unserer Befeuchtungssysteme anzuwenden."
+        },
+        {
+          "title": "2<span class=\"text-34 md:text-20\">Kontinenten</span>",
+          "subtitle": "Präsenz auf",
+          "desc": "Wir haben zwei Hauptniederlassungen in Europa und Kanada eröffnet, wo die Luftbefeuchtung in Innenräumen ein echtes Problem darstellt."
+        },
+        {
+          "title": ">20<span class=\"text-34 md:text-20\">Partner</span>",
+          "subtitle": "in der ganzen Welt",
+          "desc": "Wir konzentrieren uns auf den Ausbau unseres Partner- und Unterstützungsnetzes in der ganzen Welt."
+        }
+      ]
+    }
   },
   "equipment": {
     "about": {
+      "title": "Über uns",
       "leftArticle": "Allen Liechty-Systemen ist gemeinsam, dass sie eine optimale Wasserfiltration erreichen, bevor sie das Wasser in Wohn-, Gewerbe- oder Industrieräumen zerstäuben. Jedes Modell der zentralen Module verfügt über ein zweistufig Umkehrosmosesystem, einen Tank für die volumetrische UV-Sterilisation und eine Hochdruck-Schlauchleitung für die Reinigung mit erneuter Sterilisation. Dieser mehrstufige Reinigungsprozess führt dazu, dass das Wasser zu 99,5% frei von Salzen wird, wodurch das Risiko der Bildung von weißem Kalk effektiv behoben wird. <br /><br />Die Module von Liechty sind mit einzigartigen, geräuschlos funktionierenden Pumpen ausgestattet, die eine hohe Leistung und eine lange Lebensdauer gewährleisten. <br /><br /> Hochpräzise Feuchtigkeitssensoren überwachen die Luftfeuchtigkeit in den Räumen und leiten diese Informationen an das Zentralmodul und die Düsen weiter, so dass eine Befeuchtung möglich ist, bei der die Aufrechterhaltung der Hygiene und die Sicherheit der Benutzer im Mittelpunkt stehen.",
       "rightArticle": "Die Classic Line Serie bietet Düsenbefeuchtungssysteme mit einzigartigen Lösungen für Ihr Haus, Ihre Wohnung oder Ihr Büro. <br /><br /> mehrstufiges Reinigungssystem gereinigt und dann durch Miniaturdüsen direkt in die Räumlichkeiten zerstäubt, wodurch die Luftfeuchtigkeit sofort erhöht und Frische entsteht. Das Liechty-System kann mit Standard-Steuergeräten gesteuert werden, die entweder kabelgebunden oder drahtlos sein können und über eingebaute hochpräzise Feuchtigkeitssensoren verfügen. <br /><br /> Je nach Modell kann das System entweder mit zwei Zonen (CL Playgreen) oder mit mehreren Zonen (CL Manitoba) ausgestattet sein."
     },
@@ -64,19 +78,45 @@
         "Volumetrische UV-Sterilisation",
         "Bedienung am Ort der Nutzung"
       ]
+    },
+    "models": {
+      "title": "Modellreihe"
     }
   },
   "system": {
+    "diagram": {
+      "title": "Strukturdiagramm"
+    },
     "features": {
       "title": "Eigenschaften"
     }
   },
+  "downloads": {
+    "promt": {
+      "title": "Herunterladen der Dateien",
+      "body": "Um weitere Unterlagen über unsere Produkte anzufordern, bitte kontaktieren Sie uns oder senden Sie uns eine Anfrage über das unten stehende Formular."
+    }
+  }, 
   "feedbackForm": {
     "title": "Haben Sie noch Fragen? Schreiben Sie uns",
     "placeholder": {
       "name": "Ihr Name",
       "phone": "Telefonnummer",
       "email": "Ihre E-Mail"
+    },
+    "button": "Nachricht senden"
+  },
+  "footer": {
+    "copyright": "© Liechty 2023. Alle Rechte vorbehalten",
+    "privacyPolicy": "Datenschutzrichtlinie"
+  },
+  "header": {
+    "nav": {
+      "main": "Hauptseite",
+      "about": "Über uns",
+      "equipment": "Befeuchter",
+      "howWorks": "Wie es funktioniert",
+      "contacts": "Kontakte"
     }
   }
 }
