--- a/locales/de.json
+++ b/locales/de.json
@@ -45,17 +45,17 @@
       "title": "In Zahlen",
       "content": [
         {
-          "title": ">15<span class=\"text-34 md:text-20\">Jahre</span>",
+          "title": ">15<span class=\"about-list-subtitles\">Jahre</span>",
           "subtitle": "Erfahrung in der Luftbefeuchtung",
           "desc": "Wir haben all unsere Erfahrungen gesammelt, um sie in der Entwicklung unserer Befeuchtungssysteme anzuwenden."
         },
         {
-          "title": "2<span class=\"text-34 md:text-20\">Kontinenten</span>",
+          "title": "2<span class=\"about-list-subtitles\">Kontinenten</span>",
           "subtitle": "Präsenz auf",
           "desc": "Wir haben zwei Hauptniederlassungen in Europa und Kanada eröffnet, wo die Luftbefeuchtung in Innenräumen ein echtes Problem darstellt."
         },
         {
-          "title": ">20<span class=\"text-34 md:text-20\">Partner</span>",
+          "title": ">20<span class=\"about-list-subtitles\">Partner</span>",
           "subtitle": "in der ganzen Welt",
           "desc": "Wir konzentrieren uns auf den Ausbau unseres Partner- und Unterstützungsnetzes in der ganzen Welt."
         }
