--- a/locales/de.json
+++ b/locales/de.json
@@ -152,7 +152,7 @@
     "button": "Nachricht senden"
   },
   "footer": {
-    "copyright": "© Liechty 2023. Alle Rechte vorbehalten",
+    "copyright": "© Liechty 2023-2024. Alle Rechte vorbehalten",
     "privacyPolicy": "Datenschutzrichtlinie"
   },
   "header": {
