--- a/locales/en.json
+++ b/locales/en.json
@@ -152,7 +152,7 @@
     "button": "Send message"
   },
   "footer": {
-    "copyright": "© Liechty 2023. All rights reserved",
+    "copyright": "© Liechty 2023-2024. All rights reserved",
     "privacyPolicy": "Privacy Policy"
   },
   "header": {
