--- a/locales/en.json
+++ b/locales/en.json
@@ -7,11 +7,11 @@
       "title": "Why air humidification matters?",
       "list": [
         "Prevents spreading of airborne infections",
-        "Makes our skin and eyes healthier",
-        "Supports our immune system",
+        "Makes your skin and eyes healthier",
+        "Supports your immune system",
         "Protects furniture and interior made of wood"
       ],
-      "info": "We notice the difference in outdoor and indoor temperatures, for example, when we enter a building. Unfortunately, our senses are not finely tuned enough to detect humidity.<br /><br />Numerous scientific studies confirm that the optimal indoor humiditylevel falls within the range of 40% to 60% relative humidity (RH).<br /><br />Maintaining the ideal humidity range can enhance our health and well-being, prevent the spread of the flu, and protect wooden interiors."
+      "info": "We notice the difference in outdoor and indoor temperatures, for example, when we enter a building. Unfortunately, our senses are not finely tuned enough to detect humidity.<br /><br />Numerous scientific studies confirm that the optimal indoor humidity level falls within the range of 40% to 60% relative humidity (RH).<br /><br />Maintaining the ideal humidity range can enhance our health and well-being, prevent the spread of the flu, and protect wooden interiors."
     },
     "applications": {
       "title": "Applications",
@@ -43,7 +43,7 @@
       "content": [
         {
           "title": "Total purification",
-          "description": "Inlet water goes through multi-stage filtration, including a double-stage RO system and volumetric UV sterilization. We eliminate 99.9% of hardness salts."
+          "description": "Inlet water goes through multi-stage filtration, including a double-stage RO system and full-volume UV sterilization. We eliminate 99.9% of salts."
         },
         {
           "title": "Central equipment",
