feat: change text data

--- a/locales/en.json
+++ b/locales/en.json
@@ -108,7 +108,7 @@
   "equipment": {
     "about": {
       "title": "About",
-      "leftArticle": "All Liechty systems share a common commitment to achieving optimal water filtration before atomizing it into residential, commercial, or industrial premises. Each model of the central modules features a double reverse osmosis system, a tank for volumetric UV sterilization, and a high-pressure hoseline for washing with re-sterilization. This multi-stage purification process results in water that is 99.5% free of salts, effectively eliminating the risk of white scale formation. <br /><br /> Liechty modules are equipped with unique pumps that operate silently, ensuring high performance and a long lifespan. <br /><br /> High-precision humidity sensors monitor the RH level in the rooms and relay this information to the central module and nozzles, thus allowing for humidification with a strong emphasis on maintaining high hygiene and user safety.",
+      "leftArticle": "All Liechty systems share a common commitment to achieving optimal water filtration before atomizing it into residential, commercial, or industrial premises. Each model of the central modules features a double reverse osmosis system, a tank for full-volume UV sterilization, and a high-pressure hoseline for washing with re-sterilization. This multi-stage purification process results in water that is 99.5% free of salts, effectively eliminating the risk of white scale formation. <br /><br /> Liechty modules are equipped with unique pumps that operate silently, ensuring high performance and a long lifespan. <br /><br /> High-precision humidity sensors monitor the RH level in the rooms and relay this information to the central module and nozzles, thus allowing for humidification with a strong emphasis on maintaining high hygiene and user safety.",
       "rightArticle": "The Classic Line series offers high pressure nozzle humidification systems with unique solutions for your home, apartment or office. <br /><br /> In this system, water is first purified by a unique multi-stage purification system and then atomized by miniature nozzles directly into the premises, instantly increasing the RH level and providing freshness. The Liechty system can be controlled using standard control units, which can be either wired or wireless and feature built-in high-accuracy humidity sensors. <br /><br /> Depending on the model, the system can be either dual-zone (CL Playgreen) or multi-zone (CL Manitoba)."
     },
     "features": {
@@ -118,7 +118,7 @@
         "Double RO purification",
         "Noiseless operation",
         "Water circulation with UV re-sterilization",
-        "Volumetric UV sterilization",
+        "Full-volume UV sterilization",
         "Service at place of use"
       ]
     },
