feat: update screen with downloadable files

--- a/locales/de.json
+++ b/locales/de.json
@@ -144,6 +144,10 @@
       {
         "title": "Broschüre",
         "description": "Unsere Broschüre gibt Ihnen einen Überblick über die Entwicklungen in Liechty."
+      },
+      {
+        "title": "Diagramme für die Montage von Hydraulikdüsen",
+        "description": "In diesem Abschnitt werden Hydraulikschemata für aktive und passive Düsenbaugruppen vorgestellt."
       }
     ],
     "promt": {
